<resources>
    <string name="app_name">Task</string>
    <string name="loding">Loading...</string>
    <string name="downloading">Downloading...</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="currency_long">Currency Long</string>
    <string name="currency">Currency</string>
    <string name="tax_fee">Tax Fee</string>
    <string name="network_not_connected_msg">Please connect to network to download the data.</string>

</resources>
